package com.sgda.domain.enums;

public enum EtatDemandeCode {
    BROUILLON,
    SOUMISE,
    EN_ATTENTE,
    VALIDEE,
    REFUSEE,
    ARCHIVEE
}
