package com.sgda.domain.enums;

public enum RoleCode {
    ETUDIANT,
    AGENT,
    ADMIN
}
